# fastucp

./: pyproject.toml
examples/simple_store/: agent.py  inventory.py  server.py
fastucp/: __init__.py  builders.py  client.py  core.py  exceptions.py  presets.py  security.py  service.py  store.py  types.py  version.py
fastucp/presets/: __init__.py  base.py  capability.py  payment.py
fastucp/protocols/: a2a.py  mcp.py  protocol.py
